--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,6 @@
 .test_false {
   padding-top: 145px;
-  background-color: #eb4034;
+  /*background-color: #eb4034;*/
   font-family: "Montserrat", sans-serif;
   letter-spacing: 0px;
   line-height: 1.5em;
