--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 .test {
   padding-top: 45px;
-  background-color: #eb4034 !important;
+  /*background-color: #eb4034 !important;*/
   font-family: "Montserrat", sans-serif;
   letter-spacing: 0px;
   line-height: 1.5em;
